Closed Bug 1733864 Opened 3 years ago Closed 3 years ago

Unable to build with `ac_add_options --disable-updater` since bug 1728167

Categories

(Toolkit :: Application Update, defect, P3)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- wontfix
firefox94 --- fixed
firefox95 --- fixed

People

(Reporter: spohl, Assigned: spohl)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

From bug 1728167 comment 11:

This change breaks building with ac_add_options --disable-updater.

Error message:
/release/toolkit/xre/nsUpdateDriver.h:11:10: fatal error: 'nsIUpdateService.h' file not found

Pushed by spohl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2658aa5d60dc
Ensure that build succeeds with ac_add_options --disable-updater in mozconfig after bug 1728167 landed. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Thanks for the quick fix :spohl, could this be uplifted to beta?

(In reply to matthias koplenig [:metasieben] from comment #4)

Thanks for the quick fix :spohl, could this be uplifted to beta?

That should be possible. In order to file an uplift request we need to provide a "user impact if declined". Would you be able to explain in a sentence or two how this would impact you (and others) if this patch didn't get uplifted, aside from the obvious that the build fails if built without the updater (which in itself shouldn't impact users, since official builds are always built with the updater)? I can then file the uplift request. Thanks!

Flags: needinfo?(mozilla)

So i tried coming up with a reason for the uplift, but you are right, the only one is
that it would fix this rather niche usecase when building Firefox.

I'm not sure how important it is that supported options like --disable-updater
don't end in broken builds.

Flags: needinfo?(mozilla)

(In reply to matthias koplenig [:metasieben] from comment #6)

I'm not sure how important it is that supported options like --disable-updater
don't end in broken builds.

I think if we can name a consumer who builds Firefox Beta using this option, and presumably signs and releases said versions, then an uplift is warranted. But if this is just a case of breaking developer builds, I believe it is reasonable to expect that said developer could apply this patch as a one-off.

Downstreams like linux distros use --disable-updater.

Oh, but it's a mac problem.

Set release status flags based on info from the regressing bug 1728167

Given that this is effectively NPOTB for the builds we actually ship, I'm fine taking it on Beta as a ride-along uplift if y'all want to nominate it for approval. I don't think we need to go out of our way to backport to Release for 93, though. I'm also fine with just wontfixing for 94. Agreed that the impact is minimal either way.

The patch landed in nightly and beta is affected.
:spohl, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(spohl.mozilla.bugs)

Comment on attachment 9244183 [details]
Bug 1733864: Ensure that build succeeds with ac_add_options --disable-updater in mozconfig after bug 1728167 landed. r=mstange

Beta/Release Uplift Approval Request

  • User impact if declined: Developer builds with a non-default configuration that disables the building of the updater would fail.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This does not affect builds that we ship to users. This only restores the ability for developers to build without the updater.
  • String changes made/needed: none
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #9244183 - Flags: approval-mozilla-beta?

Comment on attachment 9244183 [details]
Bug 1733864: Ensure that build succeeds with ac_add_options --disable-updater in mozconfig after bug 1728167 landed. r=mstange

Approved for 94.0b4.

Attachment #9244183 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: