Bug 1733864: Ensure that build succeeds with ac_add_options --disable-updater in mozconfig after bug 1728167 landed. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D127431